--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=none
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
+jwt.secret=testing
