--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -51,6 +51,12 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.6.3</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
