--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8085
 spring.datasource.url=jdbc:mysql://localhost:3306/cacttus_parking?useSSL=false&serverTimezone=UTC
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.mvc.format.date-time=dd-MM-yyy HH:mm
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=none
@@ -7,3 +9,5 @@ spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 spring.main.allow-circular-references=true
 jwt.secret=javainuse
+hibernate.jdbc.batch_size=20
+
