--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,4 +10,6 @@ spring.flyway.baseline-on-migrate=true
 spring.main.allow-circular-references=true
 jwt.secret=javainuse
 hibernate.jdbc.batch_size=20
+springdoc.api-docs.path=/api/docs/json
+springdoc.swagger-ui.path=/api/docs/ui
 
